; ModuleID = '/home/carl/AnghaBench/hiredis/extr_read.c___redisReaderSetErrorProtocolByte.c'
source_filename = "/home/carl/AnghaBench/hiredis/extr_read.c___redisReaderSetErrorProtocolByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"Protocol error, got %s as reply type byte\00", align 1
@REDIS_ERR_PROTOCOL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8)* @__redisReaderSetErrorProtocolByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__redisReaderSetErrorProtocolByte(i32* %0, i8 signext %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8, align 1
  %5 = alloca [8 x i8], align 1
  %6 = alloca [128 x i8], align 16
  store i32* %0, i32** %3, align 8
  store i8 %1, i8* %4, align 1
  %7 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %8 = load i8, i8* %4, align 1
  %9 = call i32 @chrtos(i8* %7, i32 8, i8 signext %8)
  %10 = getelementptr inbounds [128 x i8], [128 x i8]* %6, i64 0, i64 0
  %11 = getelementptr inbounds [8 x i8], [8 x i8]* %5, i64 0, i64 0
  %12 = call i32 @snprintf(i8* %10, i32 128, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %11)
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @REDIS_ERR_PROTOCOL, align 4
  %15 = getelementptr inbounds [128 x i8], [128 x i8]* %6, i64 0, i64 0
  %16 = call i32 @__redisReaderSetError(i32* %13, i32 %14, i8* %15)
  ret void
}

declare dso_local i32 @chrtos(i8*, i32, i8 signext) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @__redisReaderSetError(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
